--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -3,6 +3,15 @@
 # Misc
 # ------------------------------------------------------------
  trigger_tec_warning:1 "£trigger_tec_warning£ "
+tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenesis§! technologies."
+
+
+# Tradition Requirements
+# ------------------------------------------------------------
+ tr_tec_synthetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_synth_path_t1$§! situation."
+ tr_tec_psionics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation."
+ tr_tec_genetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation."
+ tr_tec_cybernetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_cybernetic_path_t1$§! situation."
 
 
 # AP requirements and prerequisites
