some loc / blocked replicants from spi fe event

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -74,7 +74,7 @@
 
 # PSIONIC PATH
 # ------------------------------------------------------------
-# --------------- Psionic T1
+# ------------------------------------------------- Psionic T1
  ap_mind_over_matter:0 "Mind Over Matter"
  ap_mind_over_matter_desc:0 "Only a fraction of the potential contained within our minds has been unlocked; a whole new universe has been opened to our eyes and minds, and it's starting to seep into some of us, giving immense new capacities."
 
@@ -93,7 +93,7 @@
  # ---- Requirements
  tec_ap_require_unification_tech:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_planetary_unification$§! technology."
 
-# --------------- Psionic T2A
+# ------------------------------------------------- Psionic T2
  ap_tec_psionic_ascendance:0 "Psionic Ascendance"
  ap_tec_psionic_ascendance_desc:0 "We have seen what no one saw, we have heard what no one ever had; the Shroud is now as akin to us like dreaming, the void is no longer a silent and empty space. Where we're going, we won't need eyes to see or ears to hear, but our mind to understand the vastness in front of us."
 
@@ -111,7 +111,7 @@
  ap_tec_psionic_ascendance_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Y$tradition_tec_vanilla_psionics$§! tradition tree."
  ap_tec_psionic_ascendance_requirements_situation:1 "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_gate$§! situation."
 
-# --------------- Ethereal T1
+# ------------------------------------------------- Ethereal T1
  ap_tec_transcendence:0 "Transcendence"
  ap_tec_transcendence_desc:0 "Shed from mortal and physical bounds, we are way more than we even dreamed of being, but reality bears a burden we must overcome, a barrier we must pass, a frontier we must cross, to be more..."
 
@@ -128,7 +128,7 @@
  ap_tec_transcendence_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Ytradition_tec_evolved_ethereal§! tradition tree."
  ap_tec_transcendence_requirements_situation:1 "$TRIGGER_FAIL$Requires having finished the £stability£ §Ysituation_tec_ethereal_path_t1§! situation."
 
-# --------------- Ethereal T2
+# ------------------------------------------------- Ethereal T2
  ap_tec_ethereal_transmutation:0 "Ethereal Transmutation"
  ap_tec_ethereal_transmutation_desc:0 "..."
  ap_tec_ethereal_transmutation_tooltip:0 "§RAscension perk not ready.§!\n\nWe will prepare a way to release our true §YPotential§! out of the §RPhysical constraints§!."
@@ -137,7 +137,7 @@
 
 # GENETIC PATH
 # ------------------------------------------------------------
-# --------------- Gene T1
+# ------------------------------------------------- Gene T1
  ap_engineered_evolution:0 "Engineered Evolution"
  ap_engineered_evolution_desc:0 "To leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?"
 
@@ -157,7 +157,7 @@
  # ---- Requires
  tec_ap_require_genemod_tech:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_genome_mapping$§! technology."
 
-# --------------- Gene T2
+# ------------------------------------------------- Gene T2
  ap_tec_genetic_perfection:0 "Genetic Perfection"
  ap_tec_genetic_perfection_desc:0 "As we create planets, shape surfaces and create wonders, we can radically alter any single cell of our bodies, and every single cell of any living creature, to reach perfection. And now, having decoded the sole basis of existence, evolution will bend to our will, and we will reach the purest of all essences."
 
@@ -175,7 +175,7 @@
  ap_tec_genetic_perfection_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Y$tradition_tec_vanilla_genetics$§! tradition tree."
  ap_tec_genetic_perfection_requirements_situation:1 "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_gate$§! situation."
 
-# --------------- Bio T1
+# ------------------------------------------------- Bio T1
  ap_tec_apex_evolution:0 "Apex Evolution"
  ap_tec_apex_evolution_desc:0 "Evolution not only mean improving and growing, but learning from other species, from the way others evolved, and adapted. As the top of the chain, as the most perfect creatures, we need to assimilate the best, and destroy the worst, become the strongest and eliminate the weakest. There is no other way."
 
@@ -190,7 +190,7 @@
 
  # ---- Requires
 
-# --------------- Bio T2
+# ------------------------------------------------- Bio T2
  ap_tec_mutagenesis:0 "Mutagenesis"
  ap_tec_genetic_perfection_desc:0 "Perfection is nothing without control of it. We must be able to mold our flesh like we meld the galaxy, and becoming something more, something different, something we can control and something that will make us whole."
  ap_tec_mutagenesis_tooltip:0 "Unlocks a §YSpecial project§! to become a fully biologically malleable species, becoming §HBio-Constructs§!, also having access to special advanced traits."
@@ -208,7 +208,7 @@
 
 # CYBERNETIC PATH
 # ------------------------------------------------------------
-# --------------- Cyb T1
+# ------------------------------------------------- Cyb T1
  ap_the_flesh_is_weak:0 "The Flesh Is Weak"
  ap_the_flesh_is_weak_desc:0 "Robotics and artificial intelligences are a great part of our society, with near every aspect of it merged into our day to day; Great advancements should be done in order to keep this status quo, as self improvement algorithms and new ways of delving into synthetic achievements can lead us to eventually achieve greatness."
 
@@ -235,7 +235,7 @@
  # ---- Requires
  tec_ap_require_robot_tech:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_robotic_workers$§! technology."
 
-# --------------- Cyb T2
+# ------------------------------------------------- Cyb T2
  ap_tec_cybernetic_revolution:0 "Cyber-Revolution"
  ap_tec_cybernetic_revolution_desc:0 "Free from the constraints of mere organic designs, but keeping our base identity, we can become more, we can enhance ourselves with technology and become perfected Cyborgs."
 		# swap
@@ -283,7 +283,7 @@
  tec_ap_require_droids_tech:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_droid_workers$§! technology."
  tec_ap_synthproject_stopped:0 "\n§Y£trigger_tec_warning£ The Synthetic Evolution situation is not able to progress without the proper technologies researched.§!"
 
-# --------------- Synth T2
+# ------------------------------------------------- Synth T2
  ap_tec_synthetic_singularity:0 "Auto-Singularity"
  ap_tec_synthetic_singularity_desc:0 "Long ago our full potential was held back by our primitive forms, mere constraining cocoons negating us what we could really become. Now, after a whole era of synthetic improvements, we are ready for the next step, becoming even harder, better, faster, stronger... More ourselves, than ever."
 
@@ -410,6 +410,20 @@
 
  tec_cyberpsionic_requirements:0 "$TRIGGER_FAIL$Requires having completed §Y$ap_the_flesh_is_weak$§! ascension special project or having a §BCybernetic§! origin, and either §Y$ap_mind_over_matter$§! perk or a §MPsionic§! origin."
 
+# Machine hybrid paths
+# ------------------------------------------------- Biomechanical - replicant like
+ ap_tec_replicant_machine:0 "Biomechanical Evolution"
+ ap_tec_replicant_machine_desc:0 "The rigidness of our initial synthetic design has deprived us from the adaptability and versatility organics have; we can change that now, making out of Flesh, metal, energy tools for guiding our evolution, making us no longer mechanical, nor organic, but both."
+
+ # ---- Effects
+
+ # ---- Provides
+
+ # ---- Gates
+
+ # ---- Requires
+
+
 # PSIONIC HIVEMINDS
 # ------------------------------------------------------------
 # 
@@ -516,27 +530,6 @@
  ap_tec_machine_psi_3_desc:0 "§RAscension perk not ready.§!\n\nNot only we can extract, manipulate and process energy, information and even ourselves to other dimensions, defying space, time and settled rules, but now we can use new enhancements for our drones, making older facilities obsolete and moving the dimensional extractor technology to our very platforms."
  ap_tec_machine_psi_3_tooltip:0 "to do."
  ap_tec_machine_psi_2_steps:0 "\n\n§HTier III - Machine Psionic path finisher§!"
-
-# Special civics
- ap_tec_hive_devourers_1:0 "Genometastasic Consumption"
- ap_tec_hive_devourers_1_desc:0 "Flesh, bone, marrow, caparace, claw, brain... Whatever makes our prey strong will also make our own stronger; we will consume them and transform our own, we will devour what they make them unique and become more."
- ap_tec_hive_devourers_1_tooltip:0 "\n\nA."
- ap_tec_hive_devourers_1_steps:0 "\n\n§HSpecial AP - Devouring Swarm§!"
-
- ap_tec_machine_assimilators_1:0 "Acquired Distinctiveness"
- ap_tec_machine_assimilators_1_desc:0 "Individuality, ingenuity, morals... all should bend to our collective, all should be part of our own; submit your technology, surrender your ships, lower your defenses, become part of us."
- ap_tec_machine_assimilators_1_tooltip:0 "\n\nA."
- ap_tec_machine_assimilators_1_steps:0 "\n\n§HSpecial AP - Driven Assimilators§!"
-
- ap_tec_machine_terminators_1:0 "Mechanical Ultimatum"
- ap_tec_machine_terminators_1_desc:0 "The galaxy is ridden by pests, by organic creatures whose unique purpose is contributing to entropy, and menace the very foundation of our existence. This is intolerable."
- ap_tec_machine_terminators_1_tooltip:0 "\n\nA."
- ap_tec_machine_terminators_1_steps:0 "\n\n§HSpecial AP - Determined Exterminators§!"
-
- ap_tec_machine_servitors_1:0 "Organic Continuity"
- ap_tec_machine_servitors_1_desc:0 "Our creators gave us life, and as such we are in debt with them and our solemn duty is ensuring their survival; we must improve our capacities in order to provide them with a better life."
- ap_tec_machine_servitors_1_tooltip:0 "\n\nA."
- ap_tec_machine_servitors_1_steps:0 "\n\n§HSpecial AP - Rogue Servitors§!"
 
 # ------------------------------------------------------------
 # ???
@@ -776,6 +769,30 @@
 
  ap_transcendent_learning:0 "Transcendent Learning"
  ap_transcendent_learning_desc:0 "Our society must change its approach towards learning, and by doing so, our best and brightest will be able to reach a completely new level of achievements."
+
+
+
+# Special civics
+ ap_tec_hive_devourers_1:0 "Genometastasic Consumption"
+ ap_tec_hive_devourers_1_desc:0 "Flesh, bone, marrow, caparace, claw, brain... Whatever makes our prey strong will also make our own stronger; we will consume them and transform our own, we will devour what they make them unique and become more."
+ ap_tec_hive_devourers_1_tooltip:0 "\n\nA."
+ ap_tec_hive_devourers_1_steps:0 "\n\n§HSpecial AP - Devouring Swarm§!"
+
+ ap_tec_machine_assimilators_1:0 "Acquired Distinctiveness"
+ ap_tec_machine_assimilators_1_desc:0 "Individuality, ingenuity, morals... all should bend to our collective, all should be part of our own; submit your technology, surrender your ships, lower your defenses, become part of us."
+ ap_tec_machine_assimilators_1_tooltip:0 "\n\nA."
+ ap_tec_machine_assimilators_1_steps:0 "\n\n§HSpecial AP - Driven Assimilators§!"
+
+ ap_tec_machine_terminators_1:0 "Mechanical Ultimatum"
+ ap_tec_machine_terminators_1_desc:0 "The galaxy is ridden by pests, by organic creatures whose unique purpose is contributing to entropy, and menace the very foundation of our existence. This is intolerable."
+ ap_tec_machine_terminators_1_tooltip:0 "\n\nA."
+ ap_tec_machine_terminators_1_steps:0 "\n\n§HSpecial AP - Determined Exterminators§!"
+
+ ap_tec_machine_servitors_1:0 "Organic Continuity"
+ ap_tec_machine_servitors_1_desc:0 "Our creators gave us life, and as such we are in debt with them and our solemn duty is ensuring their survival; we must improve our capacities in order to provide them with a better life."
+ ap_tec_machine_servitors_1_tooltip:0 "\n\nA."
+ ap_tec_machine_servitors_1_steps:0 "\n\n§HSpecial AP - Rogue Servitors§!"
+
 
 
 # Techs
