--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -676,7 +676,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
 # --------------- CYBORG ASCENSION TRAITS ----------------------
 # New cyborg
- mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
+ mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2]Replaces half the species upkeep with £pop£ §YEnergy§![trait_tec_cybernetic_leader_block]"
 
  # tec_blank
  trait_tec_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
@@ -692,13 +692,13 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_cybernetic_submodule_construction:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1%§!\n"
  trait_tec_cybernetic_submodule_knowledge:0 "$MOD_LEADER_SPECIES_EXP_GAIN$: §G+25%§!\n"
 
- trait_tec_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
+ trait_tec_cybernetic_leader_fallback:0 "\n§GLeaders from this species have additional traits and bonuses§!"
  trait_tec_cybernetic_leader_versatility:0 "$trait_tec_cybernetic_leader_fallback$"
- trait_tec_cybernetic_leader_research:0 "§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
- trait_tec_cybernetic_leader_industrial:0 "§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
- trait_tec_cybernetic_leader_versatility_industrial:0 "§GLeaders from this species have additional traits and bonuses§!"
- trait_tec_cybernetic_leader_versatility_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
- trait_tec_cybernetic_leader_industrial_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
+ trait_tec_cybernetic_leader_research:0 "\n§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
+ trait_tec_cybernetic_leader_industrial:0 "\n§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
+ trait_tec_cybernetic_leader_versatility_industrial:0 "\n§GLeaders from this species have additional traits and bonuses§!"
+ trait_tec_cybernetic_leader_versatility_research:0 "\n§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
+ trait_tec_cybernetic_leader_industrial_research:0 "\n§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
 
 # Endoskeletal implants (menial resource)
  trait_tec_cyborg_endo:0 "Reinforced Endoskeleton"
@@ -793,40 +793,15 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  TRAIT_TEC_REPLICANT_LASTGEN_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
 # cyb cyb cyb
- mod_trait_tec_replicant_main_tooltip:0 "[tec_trait_replicant_module_block][trait_tec_replicant_cybernetic_submodule_block_1][tec_trait_replicant_submodule_block]"
+ mod_trait_tec_replicant_main_tooltip:0 "[tec_trait_replicant_module_block][trait_tec_replicant_cybernetic_submodule_block_1][tec_trait_replicant_submodule_block]\nReplaces half the species upkeep with £pop£ §YEnergy§!"
 
  tec_trait_replicant_module_fallback:0 "$trait_tec_cybernetic_module_versatility$"
  tec_trait_replicant_module_versatility:0 "$trait_tec_cybernetic_module_versatility$"
  tec_trait_replicant_module_research:0 "$trait_tec_cybernetic_module_research$"
  tec_trait_replicant_module_industrial:0 "$trait_tec_cybernetic_module_industrial$"
- tec_trait_replicant_submodule_upgraded:0 "Habitability: §G+100%§!\nReplicant traits are §YUpgraded§!\n§RCannot reproduce naturally§!\n§GImmortal§!"
+ tec_trait_replicant_submodule_upgraded:0 "Habitability: §G+100%§!\nReplicant traits are §EUpgraded§!\n§RCannot reproduce naturally§!\n§GImmortal§!"
  tec_trait_replicant_submodule_standard:0 "Habitability: §G+80%§!\n§GImmortal§!"
  tec_trait_replicant_submodule_combined:0 "Habitability: §G+80%§!\nPop Growth and Assembly Speed: §G+25%§!\nReplicant trait cost: §G-1§!\n§GImmortal§!"
-
-# £mod_habitability_floor_add£
- #trait_tec_cybernetic_module_fallback:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
- # tec_blank
- #trait_tec_cybernetic_module_fallback:0 "Army Damage: §G+15%§!\n"
- #trait_tec_cybernetic_module_versatility:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
- #trait_tec_cybernetic_module_research:0 "$tec_loc_research_resources$ from $tec_loc_research_jobs$ per $tec_loc_capital_tier$: §G+0.15§!\n"
- #trait_tec_cybernetic_module_industrial:0 "$tec_loc_industrial_resources$ from $tec_loc_industrial_jobs$ per $tec_loc_capital_tier$: §G+0.15§! \n"
-
- #trait_tec_cybernetic_submodule_fallback:0 "Leader Lifespan: §G+25 years§!\n"
- #trait_tec_cybernetic_submodule_lifespan:0 "$trait_tec_cybernetic_submodule_fallback$"
- #trait_tec_cybernetic_submodule_warfare:0 "Army Damage: §G+15%§!\n"
- #trait_tec_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
- #trait_tec_cybernetic_submodule_recycling:0 "Pop Upkeep: §G-10%§!\n"
- #trait_tec_cybernetic_submodule_construction:0 "Planetary Build Speed per Pop: §G+1%§!\n"
- #trait_tec_cybernetic_submodule_knowledge:0 "Leader Experience Gain: §G+25%§!\n"
-
- #trait_tec_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
- #trait_tec_cybernetic_leader_versatility:0 "$trait_tec_cybernetic_leader_fallback$"
- #trait_tec_cybernetic_leader_research:0 "§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
- #trait_tec_cybernetic_leader_industrial:0 "§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
- #trait_tec_cybernetic_leader_versatility_industrial:0 "§GLeaders from this species have additional traits and bonuses§!"
- #trait_tec_cybernetic_leader_versatility_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
- #trait_tec_cybernetic_leader_industrial_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
-# /
 
 
  # Basic traits
@@ -842,13 +817,13 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_brain_desc:0 "§LNanoprocessors and nano memory storages complement natural neural activities, creating a network of cooperative cognitive and intellectual interchanges, greatly enhancing this species intellect and creativity.§!"
  mod_trait_tec_replicant_brain_tooltip:0 "[trait_tec_replicant_brain_block]"
  trait_tec_replicant_brain_effect_standard:0 "£trigger_tec_research£ Research from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+20%§!"
- trait_tec_replicant_brain_effect_upgraded:0 "£trigger_tec_research£ Research from £job_researcher£ [GetResearcherPlural]: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
+ trait_tec_replicant_brain_effect_upgraded:0 "§EUpgraded Trait§!\n£trigger_tec_research£ Research from £job_researcher£ [GetResearcherPlural]: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
 
  trait_tec_replicant_body:0 "Augmented Physique"
  trait_tec_replicant_body_desc:0 "§LA perfect bodily composition, paired with a really efficient metabolism and a impervious health and efficient usage and recyclement of resources makes this species have a close to perfect body.§!"
  mod_trait_tec_replicant_body_tooltip:0 "[trait_tec_replicant_body_block]"
  trait_tec_replicant_body_effect_standard:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-15%§!\n$mod_planet_pops_upkeep_mult$: §G-10%§!"
- trait_tec_replicant_body_effect_upgraded:0 "$MOD_POP_AMENITIES_USAGE_MULT$: §G-25%§!\n$mod_planet_pops_upkeep_mult$: §G-20%§!"
+ trait_tec_replicant_body_effect_upgraded:0 "§EUpgraded Trait§!\n$MOD_POP_AMENITIES_USAGE_MULT$: §G-25%§!\n$mod_planet_pops_upkeep_mult$: §G-20%§!"
 
  trait_tec_replicant_habitability:0 "Adaptable Nanocells"
  trait_tec_replicant_habitability_desc:0 "§LIntelligent biosynthetic measures allow a high degree of adaptation for this replicant species, modifying physionomy, capacities and the whole organism for with the environment.§!"
@@ -861,28 +836,28 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_universal_desc:0 "§LConstant actuators and a resilient genetic and programming code allows a really effective reproductive rate, either being natural, forced cloning or enhanced development.§!"
  mod_trait_tec_replicant_universal_tooltip:0 "[trait_tec_replicant_universal_block]"
  trait_tec_replicant_universal_effect_standard:0 "Pop growth: §G+20%§!\nPop Assembly Speed: §G+20%§!"
- trait_tec_replicant_universal_effect_upgraded:0 "Pop Assembly Speed: §G+40%§!"
+ trait_tec_replicant_universal_effect_upgraded:0 "§EUpgraded Trait§!\nPop Assembly Speed: §G+40%§!"
 
 	# Budding
  trait_tec_replicant_budding:0 "Enhanced Bioprinting"
  trait_tec_replicant_budding_desc:0 "§LSeveral nanocomposites and biomechanical adaptations allow a flexible method of reproduction by direct pseudo-replication of the original template of this species.§!"
  mod_trait_tec_replicant_budding_tooltip:0 "[trait_tec_replicant_budding_block]" 
  trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.025§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
- trait_tec_replicant_budding_effect_upgraded:0 "Each replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ trait_tec_replicant_budding_effect_upgraded:0 "§EUpgraded Trait§!\nEach replicant pop working as a slave or better produces §G0.05§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
 	# +10% basic and industrial resources
  trait_tec_replicant_capacitor:0 "Nano-Capacitors"
  trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed nanites integrated with computing, work and development spaces.§!"
  mod_trait_tec_replicant_capacitor_tooltip:0 "[trait_tec_replicant_capacitor_block]"
  trait_tec_replicant_capacitor_effect_standard:0 "Resources from Jobs: §G+10%§!\nUpkeep from Jobs: §G-10%§!"
- trait_tec_replicant_capacitor_effect_upgraded:0 "Each Replicant pop provides §G+0.25%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
+ trait_tec_replicant_capacitor_effect_upgraded:0 "§EUpgraded Trait§!\nEach Replicant pop provides §G+0.25%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
 
 	# army damage army health allows replicant armies
  trait_tec_replicant_warfare:0 "Bio-Warform"
  trait_tec_replicant_warfare_desc:0 "§LImprinted combat capacities, external layers of nano-dermis and a overclocked cyber-biological organs, with also integrated weapons and modular capacities make this species a deadly powerhouse, able to overcome any regular opponent.§!"
  mod_trait_tec_replicant_warfare_tooltip:0 "[trait_tec_replicant_warfare_block]"
  trait_tec_replicant_warfare_effect_standard:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
- trait_tec_replicant_warfare_effect_upgraded:0 "Army Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
+ trait_tec_replicant_warfare_effect_upgraded:0 "§EUpgraded Trait§!\nArmy Damage: §G+25%§!\nArmy Health: §G+25%§!\nArmy Morale Damage: §G+25%§!"
 
 # --------------- MACHINE ASCENSION TRAITS ----------------------
 # Advanced robot traits
@@ -1123,7 +1098,7 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  # 25 years lifespan
  # psionic produces mult
  # leader thingie
- mod_trait_tec_cyberpsionic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1][trait_tec_cybernetic_leader_block]"
+ mod_trait_tec_cyberpsionic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_submodule_block_1][trait_tec_cyberpsionic_module_block_1]Replaces half the species upkeep with £pop£ §YEnergy§![trait_tec_cybernetic_leader_block]"
 # 
  trait_tec_cyberpsionic_module_fallback:0 "$mod_planet_psionic_jobs_produces_mult$: §G+10%§!\n"
  trait_tec_cyberpsionic_module_entropy:0 "$mod_planet_psionic_jobs_produces_mult$: §G+15%§!\n$tec_loc_pop_growth$ and $tec_loc_biological_assembly$: §R-5%§!\n"
