Updates to Preservation ethic and terraforming ascension perks

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -31,6 +31,17 @@ tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenes
 
  tec_crisis_cant_pick_ap:0 "$TRIGGER_FAIL$ Really are you going to take this as crisis? Disgusting"
 
+ tec_ap_allows_world_shaper: "Allows access to the §YWorld Shaper§! Ascension Perk"
+
+ tec_blocks_ap_world_shaper:0 "$TRIGGER_FAIL$This Ascension Perk is blocked by Origins that change capital planet class to Hive or Machine Wolrds."
+ tec_blocks_ap_hive_worlds:0 "$TRIGGER_FAIL$This Ascension Perk is blocked by Origins that change capital planet class to Gaia World."
+ tec_blocks_ap_machine_worlds:0 "$TRIGGER_FAIL$This Ascension Perk is blocked by Origins that change capital planet class to Gaia World."
+
+ # Terraforming APs
+
+ tec_ap_terraforming_steps:0 "\n\n§HTier I - Terraforming Path Finisher§!"
+ tec_ap_world_shapers_affinity_tooltip:0 "Species with the §Y$trait_tec_natural_sync$§! trait gain 50% greater benefits for living on §YPerfect§! worlds, but penalties for living on non-§YPerfect§! worlds are likewise amplified."
+
  # --------- Requirements --------------
 	# pure paths
 
