--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -114,7 +114,7 @@ decision_tec_environment_fix:0 "Environmental Restoration"
 
  decision_tec_ecoworld_project_unemployment_effects:1 "\n\n§YAs the planet no longer will have access to industrial districts, any £job_foundry£ Metallurgist or £job_artisan£ Artisan jobs will be automatically demoted.§!\n\n"
 
- tec_jumptext:0 "\n"
+ tec_jumptext:0 "\n\n"
 
 
 
