--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -231,6 +231,7 @@ GESTALT_ETHIC_ALLOWS_LETMEALONE:0 "§EMost of the diplomatic actions are not ava
 
 #Eco
 GESTALT_ETHIC_ALLOWS_NATURALIZATION:0 "§EAllows §HPlanet Enhancing§! Decisions§!"
+GESTALT_ETHIC_ALLOWS_WORLD_SHAPER:0 "§EAllows §HWorld Shaper§! Ascension Perk§!"
 #Industry
 GESTALT_ETHIC_ALLOWS_STRIPMINING:0 "§EAllows §HOverstripping§! Decisions on planets§!"
 
