--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1923,8 +1923,8 @@ tec_unworthy_biopop_citizenship:0 "$TRIGGER_FAIL$These dirty xeno bioforms are n
  BIOSERVANT_tooth_plural:0 "Biocreation teeth"
  BIOSERVANT_fossil:0 "Biocreation fossil"
  BIOSERVANT_fossil_plural:0 "Biocreation fossils"
- BIOSERVANT_remnant:0 "RBiocreation remnant"
+ BIOSERVANT_remnant:0 "Biocreation remnant"
  BIOSERVANT_remnant_plural:0 "Biocreation remnants"
 
 # Trait tooltips
-trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth$ on Perfect Planets: §G+10%§!"
+trait_tec_natural_sync_tooltip: "$tec_loc_pop_growth$ on Perfect Planets: §G+10%§!\n$tec_loc_biological_assembly$ on Perfect Planets: §G+10%§!\n\nThe §H$ap_world_shaper$§! Ascension Perk amplifies this trait's effects."
